# ProjetPython

./: .env  Dockerfile  README.md  app.py  db-cm0-configmap.yaml  db-deployment.yaml  docker-compose.yml  env-configmap.yaml  formateur.py  ingress.yml  init.sql  promeo.sql  pyproject.toml  web-deployment.yaml  web-service.yaml
static/scripts/: formateur.js  index.js
static/style/dark/: formateur.css  index.css  style.css
static/style/light/: formateur.css  index.css  style.css
templates/: admin.jinja  bouton.jinja  calendarf.jinja  eleve.jinja  formateur.jinja  index.jinja
