[tool.poetry]
name = "promeo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
pony = "^0.7.17"
datetime = "^5.4"
schedule = "^1.2.1"
pymysql = "^1.1.0"
flask-mail = "^0.9.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.3"
cryptography = "^42.0.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"